# polymarket-raft

./: .gitignore  Cargo.toml  Makefile  README.md
config/: raft.yaml
docs/: DESIGN.md
research/: pyproject.toml
research/raft_research/: TAKER_GATE_FINDINGS.md  __init__.py  backtest_maker.py  backtest_taker.py  build_index.py  build_labels.py  build_state_table.py  calibrate.py  compare.py  duck.py  evaluate_sizing.py  fair_value.py  features.py  maker_bucket_diagnostics.py  markouts.py  paths.py  rolling_sizing_eval.py  sizing.py  sizing_ablation.py  taker_gate.py  taker_gate_diagnostics.py  train_taker_gate.py
research/raft_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: run_research.sh  run_research_pipeline.sh  sweep_backtests.sh  sweep_taker_gate.sh
src/: config.rs  event_bus.rs  health.rs  lib.rs  time_util.rs  types.rs
src/collector/: backoff.rs  market_ws.rs  mod.rs  rest_hydrator.rs  rtds_ws.rs
src/execution/: broker.rs  cost_model.rs  heartbeat.rs  mod.rs  quote_manager.rs  risk.rs  router.rs
src/features/: flow.rs  live_state.rs  mod.rs  state_builder.rs  vol.rs
src/models/: calibrator.rs  fair_value.rs  mod.rs  retrieval.rs
src/storage/: mod.rs  parquet_sink.rs
