[project]
name = "raft-research"
version = "0.1.0"
description = "RAFT offline research + backtest stack"
requires-python = ">=3.10"
dependencies = [
  "duckdb>=1.0",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=15.0",
  "scikit-learn>=1.3",
  "hnswlib>=0.8",
  "matplotlib>=3.8",
  "pyyaml>=6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["raft_research*"]
